--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/fluorescence_seg_final.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/fluorescence_seg_final.ipynb
@@ -42,14 +42,25 @@
    "outputs": [],
    "source": [
     "class fluo_segmentation:\n",
-    "    def __init__(self,input_file_prefix,output_path,all_channels,smooth_sigma=0.75,wrap_pad=3,hess_pad=4,min_obj_size=30,\\\n",
-    "                 local_otsu_r=15,threshold_range=20,threshold_step=5,convex_threshold=0.8):\n",
-    "        \n",
-    "        \n",
+    "    def __init__(\n",
+    "        self,\n",
+    "        input_file_prefix,\n",
+    "        output_path,\n",
+    "        all_channels,\n",
+    "        smooth_sigma=0.75,\n",
+    "        wrap_pad=3,\n",
+    "        hess_pad=4,\n",
+    "        min_obj_size=30,\n",
+    "        local_otsu_r=15,\n",
+    "        threshold_range=20,\n",
+    "        threshold_step=5,\n",
+    "        convex_threshold=0.8,\n",
+    "    ):\n",
+    "\n",
     "        self.input_file_prefix = input_file_prefix\n",
     "        self.output_path = output_path\n",
     "        self.all_channels = all_channels\n",
-    "        \n",
+    "\n",
     "        self.smooth_sigma = smooth_sigma\n",
     "        self.wrap_pad = wrap_pad\n",
     "        self.hess_pad = hess_pad\n",
@@ -58,170 +69,203 @@
     "        self.threshold_range = threshold_range\n",
     "        self.threshold_step = threshold_step\n",
     "        self.convex_threshold = convex_threshold\n",
-    "    \n",
-    "    def to_8bit(self,img_arr):\n",
+    "\n",
+    "    def to_8bit(self, img_arr):\n",
     "        max_val = np.max(img_arr)\n",
     "        min_val = np.min(img_arr)\n",
-    "        norm_array = (img_arr-min_val)/(max_val-min_val)\n",
+    "        norm_array = (img_arr - min_val) / (max_val - min_val)\n",
     "        norm_byte_array = sk.img_as_ubyte(norm_array)\n",
     "        return norm_byte_array\n",
-    "    \n",
-    "    def preprocess_img(self,img_arr,sigma=1.):\n",
-    "        img_smooth = self.to_8bit(sk.filters.gaussian(img_arr,sigma=sigma,preserve_range=True,mode='reflect'))\n",
+    "\n",
+    "    def preprocess_img(self, img_arr, sigma=1.0):\n",
+    "        img_smooth = self.to_8bit(\n",
+    "            sk.filters.gaussian(\n",
+    "                img_arr, sigma=sigma, preserve_range=True, mode=\"reflect\"\n",
+    "            )\n",
+    "        )\n",
     "        return img_smooth\n",
-    "    \n",
-    "    def hessian_contrast_enc(self,img_arr,edge_padding=0):\n",
-    "        img_arr = np.pad(img_arr, edge_padding, 'reflect')\n",
-    "        hessian = sk.feature.hessian_matrix(img_arr,order=\"rc\")\n",
+    "\n",
+    "    def hessian_contrast_enc(self, img_arr, edge_padding=0):\n",
+    "        img_arr = np.pad(img_arr, edge_padding, \"reflect\")\n",
+    "        hessian = sk.feature.hessian_matrix(img_arr, order=\"rc\")\n",
     "        eigvals = sk.feature.hessian_matrix_eigvals(hessian)\n",
-    "        min_eigvals = np.min(eigvals,axis=0)\n",
-    "        if edge_padding>0:\n",
-    "            min_eigvals = min_eigvals[edge_padding:-edge_padding,edge_padding:-edge_padding]\n",
+    "        min_eigvals = np.min(eigvals, axis=0)\n",
+    "        if edge_padding > 0:\n",
+    "            min_eigvals = min_eigvals[\n",
+    "                edge_padding:-edge_padding, edge_padding:-edge_padding\n",
+    "            ]\n",
     "        return min_eigvals\n",
-    "    \n",
-    "    def find_mask(self,cell_local_mask,min_eigvals,edge_threshold,min_size=30):\n",
-    "        edge_mask = min_eigvals>edge_threshold\n",
+    "\n",
+    "    def find_mask(self, cell_local_mask, min_eigvals, edge_threshold, min_size=30):\n",
+    "        edge_mask = min_eigvals > edge_threshold\n",
     "        edge_mask = sk.morphology.binary_closing(edge_mask)\n",
-    "        composite_mask = cell_local_mask*edge_mask\n",
-    "        composite_mask = sk.morphology.remove_small_objects(composite_mask,min_size=min_size)\n",
+    "        composite_mask = cell_local_mask * edge_mask\n",
+    "        composite_mask = sk.morphology.remove_small_objects(\n",
+    "            composite_mask, min_size=min_size\n",
+    "        )\n",
     "        composite_mask = sk.morphology.remove_small_holes(composite_mask)\n",
     "        return composite_mask\n",
-    "    \n",
-    "    def compute_convexity(self,curr_obj):    \n",
+    "\n",
+    "    def compute_convexity(self, curr_obj):\n",
     "        area = np.sum(curr_obj)\n",
     "        convex_hull = sk.morphology.convex_hull_image(curr_obj)\n",
     "        convex_hull_area = np.sum(convex_hull)\n",
-    "        convexity = area/convex_hull_area\n",
+    "        convexity = area / convex_hull_area\n",
     "        return convexity\n",
-    "    \n",
-    "    def get_object_coords(self,obj_thresh,padding=1):    \n",
-    "        x_dim_max = np.max(obj_thresh,axis=0)\n",
+    "\n",
+    "    def get_object_coords(self, obj_thresh, padding=1):\n",
+    "        x_dim_max = np.max(obj_thresh, axis=0)\n",
     "        x_indices = np.where(x_dim_max)[0]\n",
-    "        x_min = max(np.min(x_indices)-padding,0)\n",
-    "        x_max = min(np.max(x_indices)+padding+1,obj_thresh.shape[1])\n",
+    "        x_min = max(np.min(x_indices) - padding, 0)\n",
+    "        x_max = min(np.max(x_indices) + padding + 1, obj_thresh.shape[1])\n",
     "\n",
-    "        y_dim_max = np.max(obj_thresh,axis=1)\n",
+    "        y_dim_max = np.max(obj_thresh, axis=1)\n",
     "        y_indices = np.where(y_dim_max)[0]\n",
-    "        y_min = max(np.min(y_indices)-padding,0)\n",
-    "        y_max = min(np.max(y_indices)+padding+1,obj_thresh.shape[0])\n",
+    "        y_min = max(np.min(y_indices) - padding, 0)\n",
+    "        y_max = min(np.max(y_indices) + padding + 1, obj_thresh.shape[0])\n",
     "\n",
-    "        return x_min,x_max,y_min,y_max\n",
-    "    \n",
-    "    def crop_object(self,conn_comp,obj_idx,padding=1):\n",
-    "        obj_thresh = (conn_comp==obj_idx)\n",
-    "        x_min,x_max,y_min,y_max = self.get_object_coords(obj_thresh,padding=padding)\n",
-    "        curr_obj = obj_thresh[y_min:y_max,x_min:x_max]\n",
+    "        return x_min, x_max, y_min, y_max\n",
+    "\n",
+    "    def crop_object(self, conn_comp, obj_idx, padding=1):\n",
+    "        obj_thresh = conn_comp == obj_idx\n",
+    "        x_min, x_max, y_min, y_max = self.get_object_coords(obj_thresh, padding=padding)\n",
+    "        curr_obj = obj_thresh[y_min:y_max, x_min:x_max]\n",
     "        return curr_obj\n",
     "\n",
-    "    def get_image_weights(self,conn_comp,padding=1):\n",
+    "    def get_image_weights(self, conn_comp, padding=1):\n",
     "        objects = np.unique(conn_comp)[1:]\n",
     "        weights = []\n",
     "        for obj_idx in objects:\n",
-    "            curr_obj = self.crop_object(conn_comp,obj_idx,padding=padding)\n",
+    "            curr_obj = self.crop_object(conn_comp, obj_idx, padding=padding)\n",
     "            weight = self.compute_convexity(curr_obj)\n",
     "            weights.append(weight)\n",
     "        return np.array(weights)\n",
-    "    \n",
-    "    def make_weight_arr(self,conn_comp,weights):\n",
+    "\n",
+    "    def make_weight_arr(self, conn_comp, weights):\n",
     "        weight_arr = np.zeros(conn_comp.shape)\n",
-    "        for i,obj_weight in enumerate(weights):\n",
-    "            obj_idx = i+1\n",
-    "            obj_mask = (conn_comp==obj_idx)\n",
+    "        for i, obj_weight in enumerate(weights):\n",
+    "            obj_idx = i + 1\n",
+    "            obj_mask = conn_comp == obj_idx\n",
     "            weight_arr[obj_mask] = obj_weight\n",
     "        return weight_arr\n",
     "\n",
-    "    def get_mid_threshold_arr(self,wrap_eig,padding=3):\n",
+    "    def get_mid_threshold_arr(self, wrap_eig, padding=3):\n",
     "        edge_threshold_kymo = []\n",
     "        for t in range(wrap_eig.shape[-1]):\n",
-    "            edge_threshold = sk.filters.threshold_otsu(wrap_eig[:,:,t])\n",
-    "            edge_thr_arr = edge_threshold*np.ones(wrap_eig[:,:,t].shape,dtype='uint8')\n",
+    "            edge_threshold = sk.filters.threshold_otsu(wrap_eig[:, :, t])\n",
+    "            edge_thr_arr = edge_threshold * np.ones(\n",
+    "                wrap_eig[:, :, t].shape, dtype=\"uint8\"\n",
+    "            )\n",
     "            edge_threshold_kymo.append(edge_thr_arr)\n",
     "        edge_threshold_kymo = np.array(edge_threshold_kymo)\n",
-    "        edge_threshold_kymo = np.moveaxis(edge_threshold_kymo,(0,1,2),(2,0,1))\n",
+    "        edge_threshold_kymo = np.moveaxis(edge_threshold_kymo, (0, 1, 2), (2, 0, 1))\n",
     "\n",
     "        edge_thr_kymo = tr.utils.kymo_handle()\n",
-    "        edge_thr_kymo.import_wrap(edge_threshold_kymo,scale=False)\n",
+    "        edge_thr_kymo.import_wrap(edge_threshold_kymo, scale=False)\n",
     "        mid_threshold_arr = edge_thr_kymo.return_unwrap(padding=padding)\n",
     "        return mid_threshold_arr\n",
     "\n",
-    "    def get_convex_scores(self,cell_local_mask,min_eigvals,mid_threshold_arr,threshold_range=20,threshold_step=5):\n",
-    "        edge_thresholds = [mid_threshold_arr+i for i in range(-threshold_range,threshold_range,threshold_step)]\n",
+    "    def get_convex_scores(\n",
+    "        self,\n",
+    "        cell_local_mask,\n",
+    "        min_eigvals,\n",
+    "        mid_threshold_arr,\n",
+    "        threshold_range=20,\n",
+    "        threshold_step=5,\n",
+    "    ):\n",
+    "        edge_thresholds = [\n",
+    "            mid_threshold_arr + i\n",
+    "            for i in range(-threshold_range, threshold_range, threshold_step)\n",
+    "        ]\n",
     "        weight_arrs = []\n",
     "        for edge_threshold in edge_thresholds:\n",
-    "            composite_mask = self.find_mask(cell_local_mask,min_eigvals,edge_threshold,min_size=30)\n",
-    "            conn_comp = sk.measure.label(composite_mask,neighbors=4,connectivity=2)\n",
+    "            composite_mask = self.find_mask(\n",
+    "                cell_local_mask, min_eigvals, edge_threshold, min_size=30\n",
+    "            )\n",
+    "            conn_comp = sk.measure.label(composite_mask, neighbors=4, connectivity=2)\n",
     "            weights = self.get_image_weights(conn_comp)\n",
-    "            weight_arr = self.make_weight_arr(conn_comp,weights)\n",
+    "            weight_arr = self.make_weight_arr(conn_comp, weights)\n",
     "            weight_arrs.append(weight_arr)\n",
     "        weight_arrs = np.array(weight_arrs)\n",
-    "        max_merged = np.max(weight_arrs,axis=0)\n",
-    "        return max_merged \n",
-    "    \n",
-    "    def segment(self,img_arr):\n",
+    "        max_merged = np.max(weight_arrs, axis=0)\n",
+    "        return max_merged\n",
+    "\n",
+    "    def segment(self, img_arr):\n",
     "        input_kymo = tr.utils.kymo_handle()\n",
-    "        input_kymo.import_wrap(img_arr,scale=True,scale_perc=95)\n",
+    "        input_kymo.import_wrap(img_arr, scale=True, scale_perc=95)\n",
     "        t_tot = input_kymo.kymo_arr.shape[-1]\n",
     "\n",
-    "        working_img = self.preprocess_img(input_kymo.return_unwrap(padding=self.wrap_pad),sigma=self.smooth_sigma)\n",
+    "        working_img = self.preprocess_img(\n",
+    "            input_kymo.return_unwrap(padding=self.wrap_pad), sigma=self.smooth_sigma\n",
+    "        )\n",
     "        del input_kymo\n",
     "\n",
     "        inverted = sk.util.invert(working_img)\n",
-    "        min_eigvals = self.to_8bit(self.hessian_contrast_enc(inverted,self.hess_pad))\n",
+    "        min_eigvals = self.to_8bit(self.hessian_contrast_enc(inverted, self.hess_pad))\n",
     "        del inverted\n",
     "\n",
     "        otsu_selem = disk(self.local_otsu_r)\n",
     "        local_otsu = rank.otsu(working_img, otsu_selem)\n",
-    "        cell_local_mask = working_img>local_otsu\n",
+    "        cell_local_mask = working_img > local_otsu\n",
     "        del working_img\n",
     "\n",
     "        cell_region_threshold = sk.filters.threshold_otsu(local_otsu)\n",
-    "        cell_region_mask = local_otsu>cell_region_threshold\n",
+    "        cell_region_mask = local_otsu > cell_region_threshold\n",
     "        del local_otsu\n",
-    "        cell_local_mask=cell_local_mask*cell_region_mask\n",
+    "        cell_local_mask = cell_local_mask * cell_region_mask\n",
     "        del cell_region_mask\n",
     "\n",
     "        eig_kymo = tr.utils.kymo_handle()\n",
-    "        eig_kymo.import_unwrap(min_eigvals,t_tot,padding=self.wrap_pad)\n",
+    "        eig_kymo.import_unwrap(min_eigvals, t_tot, padding=self.wrap_pad)\n",
     "        wrap_eig = eig_kymo.return_wrap()\n",
-    "        mid_threshold_arr = self.get_mid_threshold_arr(wrap_eig,padding=self.wrap_pad)\n",
+    "        mid_threshold_arr = self.get_mid_threshold_arr(wrap_eig, padding=self.wrap_pad)\n",
     "        del wrap_eig\n",
     "\n",
-    "        convex_scores = self.get_convex_scores(cell_local_mask,min_eigvals,mid_threshold_arr,\\\n",
-    "                                          threshold_range=self.threshold_range,threshold_step=self.threshold_step)\n",
+    "        convex_scores = self.get_convex_scores(\n",
+    "            cell_local_mask,\n",
+    "            min_eigvals,\n",
+    "            mid_threshold_arr,\n",
+    "            threshold_range=self.threshold_range,\n",
+    "            threshold_step=self.threshold_step,\n",
+    "        )\n",
     "        del cell_local_mask\n",
     "        del min_eigvals\n",
     "        del mid_threshold_arr\n",
     "\n",
-    "        final_mask = convex_scores>self.convex_threshold\n",
+    "        final_mask = convex_scores > self.convex_threshold\n",
     "\n",
     "        output_kymo = tr.utils.kymo_handle()\n",
-    "        output_kymo.import_unwrap(final_mask,t_tot,padding=self.wrap_pad)\n",
+    "        output_kymo.import_unwrap(final_mask, t_tot, padding=self.wrap_pad)\n",
     "        final_mask = output_kymo.return_wrap()\n",
     "\n",
-    "        segmented = [sk.measure.label(final_mask[:,:,t],neighbors=4,connectivity=2) for t in range(final_mask.shape[-1])]\n",
+    "        segmented = [\n",
+    "            sk.measure.label(final_mask[:, :, t], neighbors=4, connectivity=2)\n",
+    "            for t in range(final_mask.shape[-1])\n",
+    "        ]\n",
     "        segmented = np.array(segmented)\n",
-    "        segmented = np.moveaxis(segmented,(0,1,2),(2,0,1))\n",
+    "        segmented = np.moveaxis(segmented, (0, 1, 2), (2, 0, 1))\n",
     "        return segmented\n",
-    "    \n",
-    "    def segment_fov(self,)\n",
-    "    \n",
-    "    \n",
-    "    def init_fov_number(self,fov_number):\n",
+    "\n",
+    "    #     def segment_fov(self,)\n",
+    "\n",
+    "    def init_fov_number(self, fov_number):\n",
     "        self.fov_number = fov_number\n",
-    "        self.output_file_path = self.output_path+\"/seg_\"+str(self.fov_number)+\".hdf5\"\n",
-    "        \n",
-    "    def generate_kymograph(self,fov_number):\n",
+    "        self.output_file_path = (\n",
+    "            self.output_path + \"/seg_\" + str(self.fov_number) + \".hdf5\"\n",
+    "        )\n",
+    "\n",
+    "    def generate_kymograph(self, fov_number):\n",
     "        \"\"\"Master function for generating kymographs for the set of fovs specified on initialization. Writes an hdf5\n",
     "        file at self.output_file_path containing kymographs of shape (trench_num,y_dim,x_dim,t_dim) for each\n",
     "        row,channel combination. Dataset keys follow the convention [\"[row_number]/[channel_name]\"].\n",
     "        \"\"\"\n",
-    "        \n",
+    "\n",
     "        self.init_fov_number(fov_number)\n",
-    "        self.writedir(self.output_path,overwrite=False)\n",
-    "        self.writedir(self.temp_path,overwrite=True)\n",
-    "        imported_hdf5_handle = h5py.File(self.input_path,\"r\")\n",
+    "        self.writedir(self.output_path, overwrite=False)\n",
+    "        self.writedir(self.temp_path, overwrite=True)\n",
+    "        imported_hdf5_handle = h5py.File(self.input_path, \"r\")\n",
     "        cropped_in_y_handles = self.crop_trenches_in_y(imported_hdf5_handle)\n",
-    "        self.crop_trenches_in_x(cropped_in_y_handles)        \n",
+    "        self.crop_trenches_in_x(cropped_in_y_handles)\n",
     "        temp_output_file_path = self.temp_path + \"output.hdf5\"\n",
     "        os.rename(temp_output_file_path, self.output_file_path)\n",
     "        for cropped_in_y_handle in cropped_in_y_handles:\n",
@@ -256,7 +300,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "array = np.repeat(array, 10, 2)"
+    "# array = np.repeat(array,10,2)"
    ]
   },
   {
@@ -265,7 +309,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_kymo = kymo_handle()\n",
+    "input_kymo = tr.utils.kymo_handle()\n",
     "input_kymo.import_wrap(array, scale=True, scale_perc=95)"
    ]
   },
@@ -285,7 +329,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "seg = fluo_segmentation()"
+    "seg = fluo_segmentation(\"\", \"\", [\"channel_RFP\"])"
    ]
   },
   {
@@ -328,10 +372,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "t = 10\n",
-    "plt.imshow(input_kymo.return_wrap()[:, :, t])\n",
+    "plt.imshow(input_kymo.return_unwrap())\n",
     "plt.show()\n",
-    "plt.imshow(test_out[:, :, t] == 1)\n",
+    "output_kymo = tr.utils.kymo_handle()\n",
+    "output_kymo.import_wrap(test_out)\n",
+    "plt.imshow(output_kymo.return_unwrap())\n",
     "plt.show()"
    ]
   },
