--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Cluster_Notebook.ipynb
@@ -177,9 +177,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "input_file_prefix = \"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_\"\n",
-    "output_path = \"/n/scratch2/de64/for_sylvia/timelapse/kymo\"\n",
-    "all_channels = [\"channel_Phase\"]\n",
+    "# input_file_prefix = '/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_'\n",
+    "# output_path = '/n/scratch2/de64/for_sylvia/timelapse/kymo'\n",
+    "# all_channels = [\"channel_Phase\"]\n",
+    "\n",
+    "# kymo = tr.kymograph.kychunker(input_file_prefix=input_file_prefix,output_path=output_path,all_channels=all_channels,trench_len_y=110,padding_y=20,trench_width_x=20,\\\n",
+    "#                  t_chunk=25,t_range=(0,400),y_percentile=90,y_min_edge_dist=50,smoothing_kernel_y=(17,1),triangle_nbins=50,triangle_scaling=1.2,\\\n",
+    "#                  top_orientation=0,x_percentile=85,background_kernel_x=(301,1),smoothing_kernel_x=(9,1),otsu_nbins=50,otsu_scaling=0.7)\n",
+    "input_file_prefix = \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\"\n",
+    "output_path = \"/n/scratch2/de64/full_pipeline_test/kymo\"\n",
+    "all_channels = [\"channel_BF\", \"channel_RFP\"]\n",
     "\n",
     "kymo = tr.kymograph.kychunker(\n",
     "    input_file_prefix=input_file_prefix,\n",
@@ -189,7 +196,7 @@
     "    padding_y=20,\n",
     "    trench_width_x=20,\n",
     "    t_chunk=25,\n",
-    "    t_range=(0, 400),\n",
+    "    t_range=(0, -1),\n",
     "    y_percentile=90,\n",
     "    y_min_edge_dist=50,\n",
     "    smoothing_kernel_y=(17, 1),\n",
@@ -245,16 +252,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "kymo.generate_kymograph(15)  ## figure out this error ##"
+    "kymo.generate_kymograph(0)  ## figure out this error ##"
    ]
   },
   {
@@ -273,7 +271,27 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import h5py"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = h5py.File(\"/n/scratch2/de64/full_pipeline_test/hdf5/fov_0.hdf5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data[\"channel_BF\"][:, :, 0]"
+   ]
   },
   {
    "cell_type": "markdown",
