--- a/paulssonlab/src/paulssonlab/eaton/trenchripper/Interactive_Kymograph.ipynb
+++ b/paulssonlab/src/paulssonlab/eaton/trenchripper/Interactive_Kymograph.ipynb
@@ -61,29 +61,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "for i in range(7, 11):\n",
-    "    print(2**i)\n",
-    "    with h5py.File(\"/n/scratch2/de64/test_\" + str(i) + \".hdf5\", \"a\") as outfile:\n",
-    "        outfile.create_dataset(\n",
-    "            \"data\", (2048, 2048, 300), chunks=(2**i, 2**i, 1), dtype=\"uint16\"\n",
-    "        )\n",
-    "        for j in range(3):\n",
-    "            array = np.ones((2048, 2048, 100), dtype=\"uint16\")\n",
-    "            outfile[\"data\"][:, :, (100 * j) : (100 * j) + 100] = array\n",
-    "    infile = h5py.File(\"/n/scratch2/de64/test_\" + str(i) + \".hdf5\", \"r\")\n",
-    "    dataset = infile[\"data\"]\n",
-    "    t1 = time.time()\n",
-    "    testarr = dataset[:, :, 0:300:100]\n",
-    "    t2 = time.time()\n",
-    "    print(t2 - t1)"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -117,18 +94,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# input_path_prefix = '/n/groups/paulsson/Daniel/Image_analysis_pipeline/tiff_extraction/test_out_4/fov_'\n",
-    "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_BF\",\"channel_RFP\"],[64,12,32,45],t_subsample_step=5)\n",
-    "# imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
-    "input_path_prefix = \"/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_\"\n",
+    "input_path_prefix = \"/n/scratch2/de64/full_pipeline_test/hdf5/fov_\"\n",
+    "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_BF\",\"channel_RFP\"],[12,45],t_subsample_step=5)\n",
     "kymo = tr.interactive.kymograph_interactive(\n",
-    "    input_path_prefix,\n",
-    "    [\"channel_Phase\"],\n",
-    "    [16, 70],\n",
-    "    t_subsample_step=20,\n",
-    "    t_range=(0, 100),\n",
+    "    input_path_prefix, [\"channel_RFP\"], [12], t_subsample_step=5\n",
     ")\n",
-    "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)"
+    "imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)\n",
+    "\n",
+    "# input_path_prefix = '/n/scratch2/de64/for_sylvia/timelapse/hdf5/fov_'\n",
+    "# kymo = tr.interactive.kymograph_interactive(input_path_prefix,[\"channel_Phase\"],[16,70],t_subsample_step=20,t_range=(0,100))\n",
+    "# imported_array_list = kymo.map_to_fovs(kymo.import_hdf5)"
    ]
   },
   {
@@ -189,7 +164,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_percentile = 90\n",
+    "y_percentile = 95\n",
     "smoothing_kernel_y_dim_0 = 17\n",
     "\n",
     "y_percentiles_smoothed_list = kymo.map_to_fovs(\n",
@@ -243,7 +218,7 @@
     "    y_percentiles_smoothed_list=fixed(y_percentiles_smoothed_list),\n",
     "    imported_array_list=fixed(imported_array_list),\n",
     "    triangle_nbins=IntSlider(value=50, min=10, max=200, step=10),\n",
-    "    triangle_scaling=FloatSlider(value=1.0, min=0.0, max=2.0, step=0.01),\n",
+    "    triangle_scaling=FloatSlider(value=1.0, min=0.0, max=2.0, step=0.05),\n",
     "    y_min_edge_dist=IntSlider(value=50, min=10, max=200, step=10),\n",
     "    padding_y=IntSlider(value=20, min=0, max=100, step=1),\n",
     "    trench_len_y=IntSlider(value=270, min=0, max=1000, step=10),\n",
@@ -268,7 +243,7 @@
    "outputs": [],
    "source": [
     "triangle_nbins = 50\n",
-    "triangle_scaling = 1.2\n",
+    "triangle_scaling = 1.6\n",
     "y_min_edge_dist = 50\n",
     "padding_y = 50\n",
     "trench_len_y = 110\n",
