updated kymo cluster code with new y thresholding from interactive

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Cluster_Notebook.ipynb
@@ -261,9 +261,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from matplotlib import pyplot as plt\n",
-    "\n",
-    "plt.plot(output[0][\"data\"][:, 0])"
+    "import h5py\n",
+    "from matplotlib import pyplot as plt"
    ]
   },
   {
@@ -272,7 +271,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import h5py"
+    "data = h5py.File(\"/n/scratch2/de64/full_pipeline_test/kymo/kymo_0.hdf5\")"
    ]
   },
   {
@@ -281,7 +280,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data = h5py.File(\"/n/scratch2/de64/full_pipeline_test/hdf5/fov_0.hdf5\")"
+    "kymo_handle = tr.utils.kymo_handle()"
    ]
   },
   {
@@ -290,8 +289,23 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "data[\"channel_BF\"][:, :, 0]"
+    "kymo_handle.import_wrap(data[\"0/channel_BF\"][10])\n",
+    "plt.imshow(kymo_handle.return_unwrap())"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
