repaired cluster code orientation detection options

--- a/paulssonlab/src/paulssonlab/deaton/trenchripper/Cluster_Notebook.ipynb
+++ b/paulssonlab/src/paulssonlab/deaton/trenchripper/Cluster_Notebook.ipynb
@@ -202,7 +202,7 @@
     "    smoothing_kernel_y=(17, 1),\n",
     "    triangle_nbins=50,\n",
     "    triangle_scaling=1.2,\n",
-    "    top_orientation=0,\n",
+    "    orientation_detection=\"phase\",\n",
     "    x_percentile=85,\n",
     "    background_kernel_x=(301, 1),\n",
     "    smoothing_kernel_x=(9, 1),\n",
